# xserver

./: .clang-tidy  .editorconfig  .gitignore  .gitlab-ci.yml  AGENT.md  AGENTS.md  CHARITY-MERGE-REQUEST-PACKAGE.md  CODE_LAYOUT.md  CONTRIBUTING.md  COPYING  CoCk.md  README.md  SECURITY.md  SPDX-TODO.tsv  TODO  meson.build  meson_options.txt  run-mpbt  run-mpbt-xserver
.github/: matrix.json
.gitlab-ci/: cross-prereqs-build.sh  debian-install.sh
Xext/: bigreq.c  dpms.c  dpmsproc.h  geext.c  geext_priv.h  hashtable.h  meson.build  panoramiX.c  panoramiX.h  panoramiXSwap.c  panoramiXprocs.c  panoramiXsrv.h  saver.c  security.c  securitysrv.h  shape.c  shm.c  shm_priv.h  shmint.h  sleepuntil.c  sync.c  syncsrv.h  vidmode.c  xace.c  xace.h  xacestr.h  xcmisc.c  xcontainer.c  xf86bigfont.c  xf86bigfontsrv.h  xres.c  xselinux.h  xselinux_ext.c  xselinux_hooks.c  xselinux_label.c  xselinuxint.h  xtest.c  xvdisp.c  xvdix.h  xvdix_priv.h  (+2 more)
Xext/namespace/: config.c  hook-client.c  hook-clientstate.c  hook-device.c  hook-ext-access.c  hook-ext-dispatch.c  hook-init-rootwindow.c  hook-property.c  hook-receive.c  hook-resource.c  hook-selection.c  hook-send.c  hook-server.c  hook-windowproperty.c  hooks.h  meson.build  namespace.c  namespace.h  namespaceproto.h  ns.conf.example  proto.c
Xi/: allowev.c  allowev.h  chgdctl.c  chgdctl.h  chgfctl.c  chgfctl.h  chgkbd.c  chgkbd.h  chgkmap.c  chgkmap.h  chgprop.c  chgprop.h  chgptr.c  chgptr.h  closedev.c  closedev.h  devbell.c  devbell.h  exevents.c  exglobals.h  extinit.c  getbmap.c  getbmap.h  getdctl.c  getdctl.h  getfctl.c  getfctl.h  getfocus.c  getfocus.h  getkmap.c  getkmap.h  getmmap.c  getmmap.h  getprop.c  getprop.h  getselev.c  getselev.h  getvers.c  getvers.h  grabdev.c  (+65 more)
composite/: compalloc.c  compext.c  compinit.c  compint.h  compositeext_priv.h  compoverlay.c  compwindow.c
config/: 10-nvidia.conf  10-nvidia.conf.in  config-backends.h  config.c  dbus-core.c  dbus-core.h  hal.c  hotplug_priv.h  meson.build  udev.c  wscons.c
damageext/: damageext.c  damageextint.h
dbe/: dbe.c  dbestruct.h  midbe.c  midbe.h
dix/: atom.c  atom_priv.h  callback_priv.h  client.c  client_priv.h  closestr.h  color.c  colormap.c  colormap_priv.h  cursor.c  cursor_priv.h  devices.c  devices_priv.h  dispatch.c  dispatch.h  display.c  dix_priv.h  dixfont_priv.h  dixfonts.c  dixfonts.c.orig  dixgrabs_priv.h  dixstruct_priv.h  dixutils.c  dri3_util_priv.h  enterleave.c  enterleave.h  eventconvert.c  eventconvert.h  events.c  exevents_priv.h  extension.c  extension_priv.h  gc.c  gc_priv.h  generate-atoms  gestures.c  getevents.c  globals.c  glyphcurs.c  grabs.c  (+47 more)
doc/: Xinput.xml  Xnamespace-protocol.md  Xnamespace.md  Xserver-spec.xml
dri3/: dri3.c  dri3_priv.h  dri3_request.c  dri3_screen.c
exa/: exa.c  exa_accel.c  exa_classic.c  exa_driver.c  exa_glyphs.c  exa_migration_classic.c  exa_migration_mixed.c  exa_mixed.c  exa_offscreen.c  exa_priv.h  exa_render.c  exa_unaccel.c
fb/: fb.h  fb_priv.h  fballpriv.c  fbarc.c  fbbits.c  fbbits.h  fbblt.c  fbbltone.c  fbcmap_mi.c  fbcopy.c  fbfill.c  fbfillrect.c  fbfillsp.c  fbgc.c  fbgetsp.c  fbglyph.c  fbimage.c  fbline.c  fboverlay.c  fbpict.c  fbpict.h  fbpict_priv.h  fbpixmap.c  fbpoint.c  fbpush.c  fbscreen.c  fbseg.c  fbsetsp.c  fbsolid.c  fbtile.c  fbtrap.c  fbutil.c  fbwindow.c  wfbrename.h
glamor/: glamor.c  glamor.h  glamor_addtraps.c  glamor_composite_glyphs.c  glamor_compositerects.c  glamor_context.h  glamor_copy.c  glamor_core.c  glamor_dash.c  glamor_debug.h  glamor_egl.c  glamor_egl.h  glamor_egl_ext.h  glamor_fbo.c  glamor_font.c  glamor_font.h  glamor_glx_provider.c  glamor_glx_provider.h  glamor_glyphblt.c  glamor_gradient.c  glamor_image.c  glamor_largepixmap.c  glamor_lines.c  glamor_picture.c  glamor_pixmap.c  glamor_points.c  glamor_prepare.c  glamor_prepare.h  glamor_priv.h  glamor_program.c  glamor_program.h  glamor_rects.c  glamor_render.c  glamor_segs.c  glamor_spans.c  glamor_sync.c  glamor_text.c  glamor_transfer.c  glamor_transfer.h  glamor_transform.c  (+8 more)
glx/: clientinfo.c  createcontext.c  extension_string.c  glxcmds.c  glxcmds.c.orig  glxcmdsswap.c  glxcontext.h  glxdrawable.h  glxdri2.c  glxdricommon.c  (+38 more)
hw/xfree86/drivers/input/hurd/: meson.build  xf86-input-hurd.c
hw/xfree86/drivers/input/mouse/: README  meson.build
hw/xfree86/drivers/input/mouse/man/: mousedrv.man
hw/xfree86/drivers/input/mouse/src/: bsd_mouse.c  hurd_mouse.c  lnx_mouse.c  mouse.c  mouse.h  pnp.c  sun_mouse.c
hw/xfree86/drivers/video/vesa/: README.md  meson.build
hw/xfree86/drivers/video/vesa/man/: vesa.man
hw/xfree86/drivers/video/vesa/src/: vesa.c  vesa.h
libinox/: README.md  inox_random.h  meson.build
libinox/random/: arc4random_buf.c  getrandom.c  meson.build  windows.c
libxht/: libxht.pc.in  meson.build  xht.c  xht.h
miext/namespace/: clientpriv.c  clientpriv.h  hook-clientstate.c  hook-receive.c  hook-send.c  hooks.h  meson.build  namespace.c  namespace.h  ns.c
(+1182 files in other folders)
