libxserver__mRNA = static_library(
	'libxserver__mRNA',
	[
		'config.c',
		'hook-client.c',
		'hook-clientstate.c',
		'hook-device.c',
		'hook-ext-access.c',
		'hook-ext-dispatch.c',
		'hook-init-rootwindow.c',
		'hook-property.c',
		'hook-receive.c',
		'hook-resource.c',
		'hook-selection.c',
		'hook-send.c',
		'hook-server.c',
		'hook-windowproperty.c',
		'_mRNA.c',
	],
	include_directories: inc,
	dependencies: common_dep,
)
